# ssh-spark-submit

./: .gitignore  README.md  pyproject.toml  requiremens.txt
src/: __main__.py
src/spark/: deploymode.py  master.py  sparksubmit.py
src/spark-submit/: __main__.py  argsparser.py  ssh.py
src/utils/: argsparser.py  colors.py  ssh.py
tests/: build.sbt  spark-submit.txt
tests/configs/: app.conf  jaas.conf  spark-submit.conf
