[project]
name = "ssh-spark-submit"
version = "0.1.0"
authors = [
  { name="Example Author", email="dvi1502@mail.ru" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/dvi1502/sftp-spark-submit"
Issues = "https://github.com/dvi1502/sftp-spark-submit/issues"