[project]
name = "ssh-spark-submit"
version = "0.1.0"
authors = [
    { name = "Example Author", email = "dvi1502@mail.ru" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "bcrypt==4.2.0",
    "build==1.2.2",
    "cffi==1.17.1",
    "colorama==0.4.6",
    "config==0.5.1",
    "cryptography==43.0.1",
    "packaging==24.1",
    "paramiko==3.5.0",
    "pycparser==2.22",
    "pyhocon==0.3.61",
    "PyNaCl==1.5.0",
    "pyparsing==3.1.4",
    "pyproject_hooks==1.2.0",
]

[project.urls]
Homepage = "https://github.com/dvi1502/sftp-spark-submit"
Issues = "https://github.com/dvi1502/sftp-spark-submit/issues"


